--- a/build.xml
+++ b/build.xml
@@ -48,7 +48,7 @@
         <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
         <antcall target="build"/>
     </target>
-    <target name="run">
+    <target name="run" depends="build">
         <java classname="mediator.Main" failonerror="true" fork="yes">
             <classpath refid="slice.classpath"/>
         </java>
