--- a/build.xml
+++ b/build.xml
@@ -6,12 +6,13 @@
               as the first entry and export the buildfile again. -->
 <project basedir="." default="run" name="slice">
     <property environment="env"/>
-    <property name="ECLIPSE_HOME" value="../../../../../../../Applications/eclipse"/>
+    <property name="ECLIPSE_HOME" value="../../../../../../../usr/lib/eclipse"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.6"/>
     <property name="source" value="1.6"/>
     <path id="slice.classpath">
         <pathelement location="bin"/>
+        <pathelement location="lib/log4j-1.2.17.jar"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
